[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition="2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "src/lib/*"
]

[dependencies]
day01 = { path = "src/lib/day01" }
day02 = { path = "src/lib/day02" }
day03 = { path = "src/lib/day03" }
utils = { path = "src/lib/utils" }
